@@ -38,8 +38,10 @@ class ManualEditAction(object):
         self.project   = project
         self.old_value = old_value
         self.new_value = new_value
-        self.row       = row
-        self.col       = col
+
+        # row and col point to ListStore.
+        self.row = row
+        self.col = col
 
         if col == TRAN:
             self.document = 'translation'
@@ -51,22 +53,22 @@ class ManualEditAction(object):
 
         DESCRIPTIONS = [
             None,
-            _('editing show %s of subtitle %d')     % (edit_mode, subtitle),
-            _('editing hide %s of subtitle %d')     % (edit_mode, subtitle),
-            _('editing duration of subtitle %d')    % subtitle,
-            _('editing text of subtitle %d')        % subtitle,
-            _('editing translation of subtitle %d') % subtitle,
+            _('Editing show %s of subtitle %d')     % (edit_mode, subtitle),
+            _('Editing hide %s of subtitle %d')     % (edit_mode, subtitle),
+            _('Editing duration of subtitle %d')    % subtitle,
+            _('Editing text of subtitle %d')        % subtitle,
+            _('Editing translation of subtitle %d') % subtitle,
         ]
         
         self.description = DESCRIPTIONS[col]
         
     def do(self):
-        """Do action."""
+        """Do editing."""
 
         self._set_value(self.new_value)
 
     def redo(self):
-        """Redo action."""
+        """Redo editing."""
         
         self.do()
 
@@ -77,18 +79,41 @@ class ManualEditAction(object):
         
         if self.col in [SHOW, HIDE, DURN]:
             section = self.project.edit_mode + 's'
-            col = self.col - 1
+            data_col = self.col - 1
         else:
             section = 'texts'
-            col = self.col - 4
+            data_col = self.col - 4
 
-        row = store[self.row][NO] - 1
+        data_row = store[self.row][NO] - 1
+        new_data_row = self.project.data.set_single_value(
+            section, data_col, data_row, value
+        )
+        
+        if new_data_row == data_row:
+
+            self.project.reload_tree_view_data_in_row(self.row)
+
+        else:
+        
+            self.project.reload_tree_view_data_in_rows(data_row, new_data_row)
             
-        self.project.data.set_single_value(section, col, row, value)
-        self.project.reload_tree_view_data_in_row(self.row)
+            subtitle = new_data_row + 1
+            new_store_row = None
+            
+            for i in range(len(store)):
+                if store[i][NO] == subtitle:
+                    new_store_row = i
+                    break
+
+            tree_col = self.project.tree_view.get_column(self.col)
+            self.project.tree_view.set_cursor(new_store_row, tree_col)
+
+            # Instance variable pointing to store row needs to be updated to
+            # be able to undo at the correct row.
+            self.row = new_store_row
         
     def undo(self):
-        """Undo action."""
+        """Undo editing."""
 
         self._set_value(self.old_value)
 
@@ -102,7 +127,6 @@ class ManualEditor(Delegate):
 
         self._set_action_sensitivities(True)
         self.set_status_message(None)
-    
         store = project.tree_view.get_model()
 
         # new_value is by default a string.
@@ -118,12 +142,12 @@ class ManualEditor(Delegate):
         self.do_action(project, action)
 
     def on_tree_view_cell_editing_started(self, project, col):
-        """Set menubar and toolbar action insensitive while editing."""
+        """Set menubar and toolbar actions insensitive while editing."""
 
         self._set_action_sensitivities(False)
 
         if col in [ORIG, TRAN]:
-            message = _('Use Ctrl+Return for line-break')
+            message = _('Use Ctrl+Enter for line-break')
             self.set_status_message(message, False)
 
     def _set_action_sensitivities(self, sensitive):
